istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-http-jxboot-20200220001
  namespace: jx-production
spec:
  gateways:
  - jx-gateway.istio-system.svc.cluster.local
  - mesh
  hosts:
  - python-http-jxboot-20200220001.store.aws.z8s.io
  http:
  - route:
    - destination:
        host: python-http-jxboot-20200220001.jx-production.svc.cluster.local
        port:
          number: 80
      weight: 50
    - destination:
        host: python-http-jxboot-20200220001.jx-staging.svc.cluster.local
        port:
          number: 80
      weight: 50
